--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
     "ldrs": "^1.0.2",
+    "lucide-react": "^0.533.0",
     "next": "^13.5.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
